src/objects/Apttus__AgreementHierarchy__c.object
<CustomObject>
    <description>This defines a single instance of an agreement hierarchy relationship. It contains the leaf Id, the parent Id, the root Id, and the level.</description>
    <fields>
        <fullName>Apttus__AgreementLeafAccountId__c</fullName>
        <description>The account Id of the agreement leaf in the agreement hierarchy.
Root &gt; Parent &gt; Leaf - Account Id</description>
        <inlineHelpText>The account Id of the agreement leaf in the agreement hierarchy.
Root &gt; Parent &gt; Leaf - Account Id</inlineHelpText>
        <label>Agreement Leaf Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Hierarchies</relationshipLabel>
        <relationshipName>AgreementHierarchiesLeaf</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__AgreementLeafId__c</fullName>
        <description>The agreement Id of the leaf within the agreement hierarchy.
Root &gt; Parent &gt; Leaf</description>
        <inlineHelpText>The agreement Id of the leaf within the agreement hierarchy.
Root &gt; Parent &gt; Leaf</inlineHelpText>
        <label>Agreement Leaf</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Hierarchies (Agreement)</relationshipLabel>
        <relationshipName>AgreementHierarchiesAgreement</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__AgreementLevel__c</fullName>
        <description>The hierarchical level of the agreement of the agreement hierarchy.
It&apos;s used in the listing tree view in the agreement hierarchy to identify the indentation.</description>
        <inlineHelpText>The hierarchical level of the agreement of the agreement hierarchy.
It&apos;s used in the listing tree view in the agreement hierarchy to identify the indentation.</inlineHelpText>
        <label>Agreement Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__AgreementParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The agreement Id of the parent agreement within the agreement hierarchy.
Root &gt; Parent &gt; Leaf</description>
        <inlineHelpText>The agreement Id of the parent agreement within the agreement hierarchy.
Root &gt; Parent &gt; Leaf</inlineHelpText>
        <label>Agreement Parent</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Hierarchies (ParentId)</relationshipLabel>
        <relationshipName>AgreementHierarchiesParent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__AgreementRootId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The agreement Id of the root. A root agreement is the primordial agreement which has all of the children, grandchildren, etc. in the hierarchy. There can be only one root agreement for a hierarchy. 
Root &gt; Parent &gt; Leaf</description>
        <inlineHelpText>The agreement Id of the root. A root agreement is the primordial agreement which has all of the children, grandchildren, etc. in the hierarchy. There can be only one root agreement for a hierarchy. 
Root &gt; Parent &gt; Leaf</inlineHelpText>
        <label>Agreement Root</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Hierarchies (RootId)</relationshipLabel>
        <relationshipName>AgreementHierarchiesRoot</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Agreement Hierarchy</label>
    <nameField>
        <label>Agreement Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>